--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.7",
     "clsx": "^2.1.1",
     "next": "14.2.3",
