--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.7",
     "clsx": "^2.1.1",
@@ -17,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "three": "^0.165.0"
